; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_cipher.c_cipher_seclen.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_cipher.c_cipher_seclen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sshcipher = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"3des-cbc\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cipher_seclen(%struct.sshcipher* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sshcipher*, align 8
  store %struct.sshcipher* %0, %struct.sshcipher** %3, align 8
  %4 = load %struct.sshcipher*, %struct.sshcipher** %3, align 8
  %5 = getelementptr inbounds %struct.sshcipher, %struct.sshcipher* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @strcmp(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 14, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  %11 = load %struct.sshcipher*, %struct.sshcipher** %3, align 8
  %12 = call i32 @cipher_keylen(%struct.sshcipher* %11)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @cipher_keylen(%struct.sshcipher*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
